--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.6'
-    //    id "io.freefair.lombok" version "8.0.1"
+//    id "io.freefair.lombok" version "8.0.1"
 }
 
 group = 'com.java'
@@ -45,6 +45,17 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
+//    implementation 'io.springfox:springfox-swagger2:3.0.0'
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+//    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
+//    implementation 'org.springdoc-openapi-ui:1.6.15'
+
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.boot:spring-boot-starter-web'
