--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -40,11 +40,11 @@ repositories {
 dependencies {
     implementation 'org.hibernate:hibernate-core:6.6.3.Final'
 
-    implementation 'org.mapstruct:mapstruct:1.6.3'
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"
-
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"
 
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
@@ -72,6 +72,9 @@ dependencies {
     implementation 'io.micrometer:micrometer-tracing'
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
     implementation 'io.micrometer:micrometer-observation'
+
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
+
 }
 
 
