--- a/LibraryService/src/main/resources/bootstrap.yml
+++ b/LibraryService/src/main/resources/bootstrap.yml
@@ -9,3 +9,9 @@ spring:
       fail-fast: true
       password: admin
       username: user
+
+logging:
+  level:
+    root: "warn"
+    org.springframework.web: "debug"
+    org.hibernate: "error"
