--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -15,6 +15,7 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/release" }
     maven { url "https://repo.spring.io/milestone" }
     maven { url "https://repo.spring.io/snapshot" }
 }
@@ -28,29 +29,28 @@ jar {
 }
 
 ext {
-    set('springCloudVersion', "2022.0.3")
+    set('springCloudVersion', "2022.0.4")
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+//        mavenBom 'org.springframework.cloud:spring-cloud-gateway-dependencies:3.1.4'
     }
 }
 
 dependencies {
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.2.10.RELEASE"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.cloud:spring-cloud-starter-gateway"
+
+    implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
     implementation "org.springframework.cloud:spring-cloud-starter-config"
     implementation "org.springframework.cloud:spring-cloud-starter"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
-    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.4"
+
+    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.3"
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "junit:junit:4.1"
 }
-
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//}
 
 tasks.named('test') {
     useJUnitPlatform()
