--- a/library-service/src/main/resources/bootstrap.yml
+++ b/library-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: LibraryService
+    name: library-service
   cloud:
     compatibility-verifier:
       enabled: false
