--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ include 'book-service'
 include 'config-service'
 include 'gateway'
 include 'registry'
-include 'LibraryService'
+include 'library-service'
