--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -49,11 +49,10 @@ dependencies {
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
-//    implementation 'org.springdoc:springdoc-openapi-ui:2.0.3'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.1.4"
     implementation "org.springframework.cloud:spring-cloud-starter-config"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
@@ -62,13 +61,6 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
     implementation 'org.postgresql:postgresql:42.7.2'
     testImplementation "junit:junit:4.13.2"
-
-    implementation 'io.micrometer:micrometer-tracing'
-    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-    implementation 'io.micrometer:micrometer-observation'
-
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
-
 }
 
 tasks.named('test') {
