--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -15,9 +15,9 @@ java {
 
 repositories {
     mavenCentral()
-    maven { url "https://repo.spring.io/release" }
-    maven { url "https://repo.spring.io/milestone" }
-    maven { url "https://repo.spring.io/snapshot" }
+//    maven { url "https://repo.spring.io/release" }
+//    maven { url "https://repo.spring.io/milestone" }
+//    maven { url "https://repo.spring.io/snapshot" }
 }
 
 jar {
@@ -35,20 +35,19 @@ ext {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-//        mavenBom 'org.springframework.cloud:spring-cloud-gateway-dependencies:3.1.4'
     }
 }
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
+//    implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway"
 
     implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
     implementation "org.springframework.cloud:spring-cloud-starter-config"
     implementation "org.springframework.cloud:spring-cloud-starter"
 
-    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.3"
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
+//    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.3"
+//    testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "junit:junit:4.1"
 }
 
