--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -39,6 +39,8 @@ repositories {
 
 dependencies {
     implementation 'org.hibernate:hibernate-core:6.6.3.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+
 
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
