if the library is not available

--- a/book-service/src/main/resources/configuration.properties
+++ b/book-service/src/main/resources/configuration.properties
@@ -1,2 +1,3 @@
 url.createBook=http://library-service:8082/records/
+url.healthcheck=http://library-service:8082/records/
 url.getFreeBooks=http://library-service:8082/records/free/ids
