git update delete method in book service

--- a/book-service/src/main/resources/configuration.properties
+++ b/book-service/src/main/resources/configuration.properties
@@ -1,3 +1,6 @@
 url.createBook=http://library-service:8082/records/
 url.healthcheck=http://library-service:8082/records/
 url.getFreeBooks=http://library-service:8082/records/free/ids
+url.isTakenBook=http://library-service:8082/records/isTaken/
+url.deleteBookRecord=http://library-service:8082/records/
+url.getBookRecordByISBN=http://library-service:8082/records/isbn/
