--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -53,8 +53,9 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.1.4"
     implementation "org.springframework.cloud:spring-cloud-starter-config"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
