--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -63,7 +63,15 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.4"
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
     implementation 'org.postgresql:postgresql:42.7.2'
-    testImplementation "junit:junit:4.13.2"
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.assertj:assertj-core:3.25.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
+//    testImplementation "org.projectlombok:lombok:1.18.20"
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
 }
 
 tasks.named('test') {
