--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -63,14 +63,21 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.4"
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
     implementation 'org.postgresql:postgresql:42.7.2'
+    implementation 'org.liquibase:liquibase-core'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     testImplementation 'org.mockito:mockito-core:5.3.1'
     testImplementation 'org.assertj:assertj-core:3.25.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
-//    testImplementation "org.projectlombok:lombok:1.18.20"
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.7'
+
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.1.7'
+    testImplementation 'org.testcontainers:postgresql'
+
 
 }
 
