--- a/library-service/src/test/resources/bootstrap-test.yml
+++ b/library-service/src/test/resources/bootstrap-test.yml
@@ -5,9 +5,10 @@ spring:
     compatibility-verifier:
       enabled: false
     config:
-      uri: http://localhost:8001
-      fail-fast: true
-      password: admin
-      username: user
+      enabled: false
+#      uri: http://localhost:8001
+#      fail-fast: true
+#      password: admin
+#      username: user
   liquibase:
     enabled: false
