--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.6.3.Final'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 
-
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
@@ -71,9 +70,16 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
     implementation 'org.postgresql:postgresql:42.7.2'
 
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.assertj:assertj-core:3.25.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+//    implementation 'org.springframework.boot:spring-boot-starter'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
