--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -77,6 +77,12 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.1.7'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
+
 //    implementation 'org.springframework.boot:spring-boot-starter'
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
